2009-01-12  David Hyatt  <hyatt@apple.com>

        Optimize the retrieval of line height.  If the document is not using any first-line rules, just immediately
        default to the normal case.  Tiny speedup on PLT.

        Reviewed by Oliver Hunt

        * rendering/RenderFlow.cpp:
        (WebCore::RenderFlow::lineHeight):

2009-01-12  David Hyatt  <hyatt@apple.com>

        Fix 0.6% regression in PLT.  Make sure not to waste time updating NSScrollView's can blit on scroll state
        in the ScrollView constructor, since this is always going to be properly updated by FrameView anyway.

        Reviewed by Oliver Hunt

        * platform/ScrollView.cpp:
        (WebCore::ScrollView::ScrollView):

2009-01-12  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein

        https://bugs.webkit.org/show_bug.cgi?id=23220

        Merge layoutDelta into LayoutState. This requires that we
        push even when layoutState is disabled, so that layoutDelta
        can still be stored.

        * rendering/LayoutState.cpp:
        (WebCore::LayoutState::LayoutState):
        * rendering/LayoutState.h:
        (WebCore::LayoutState::LayoutState):
        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::layoutBlock):
        (WebCore::RenderBlock::layoutBlockChildren):
        (WebCore::RenderBlock::layoutOnlyPositionedObjects):
        * rendering/RenderBox.cpp:
        (WebCore::RenderBox::localToAbsolute):
        (WebCore::RenderBox::absoluteToLocal):
        (WebCore::RenderBox::computeAbsoluteRepaintRect):
        * rendering/RenderFlexibleBox.cpp:
        (WebCore::RenderFlexibleBox::layoutBlock):
        * rendering/RenderFlow.cpp:
        (WebCore::RenderFlow::absoluteClippedOverflowRect):
        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::updateLayerPositions):
        * rendering/RenderTableCell.cpp:
        (WebCore::RenderTableCell::computeAbsoluteRepaintRect):